Testing small change. I think the href for posts is wrong though. missing a posts/ root to the path

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             Pages
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="posts/post_1.html">
+            <a class="navbar-item" href="post_1.html">
   Post 1
 </a>
-<a class="navbar-item" href="posts/post_0.html">
+<a class="navbar-item" href="post_0.html">
   Post 0
 </a>
 
@@ -70,6 +70,7 @@
 <p class="subtitle">Let me know what you think.<br>
 This is simple container within a section</p>
 <p>Here is a paragraph. Lorem lipsum.</p>
+<p>This is a test change to make sure I remember how this works.</p>
 <h1 class="is-title" id="title-one">Title one</h1>
 <h2 id="title-two">Title two</h2>
 
